deploy/envs/base/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promptyard-server
  labels:
    app.kubernetes.io/name: promptyard-server
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: promptyard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: promptyard-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: promptyard-server
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: promptyard
    spec:
      containers:
        - name: server
          image: acrpromptyard.azurecr.io/infosupport/promptyard:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: truststore
              mountPath: /truststore
              readOnly: true
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
      volumes:
        - name: opensearch-ca-cert
          secret:
            secretName: promptyard-opensearch-http-cert
            items:
              - key: ca.crt
                path: ca.crt
        - name: truststore
          emptyDir: {}
